<resources>
    <string name="app_name">Flight Controller</string>
    <string name="button1">Route planning</string>
    <string name="button2">Motor test</string>
    <string name="button3">Autopilot</string>
    <string name="button4">Sensor calibration</string>
    <string name="button5">USB devices</string>
    <string name="button6">Sensors</string>
    <string name="button7">Wifi Client</string>
    <string name="button8">SensorTest</string>
    <string name="button9">GameController</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="RouteFinish">Route finished</string>
    <string name="DeletePoint">Clear map</string>
    <string name="title_activity_guides">guidesActivity</string>
    <string name="defaultMessage">Default message</string>
</resources>